# langGraph-experiments

./: LICENSE  README.md  pyproject.toml
apps/: env.example
apps/backend/src/web_page/adapters/input/: scraper_controller_adapter.py
apps/backend/src/web_page/application/dto/: path_dtop.py  webpage_dto.py
apps/backend/src/web_page/application/mapper/: file_mapper.py  webpage_mapper.py
apps/backend/src/web_page/application/ports/: file_port.py  scraper_port.py
apps/backend/src/web_page/application/service/: save_html_use_case.py  scraper_use_case.py
apps/backend/src/web_page/domain/entities/: files.py  webpage.py
apps/backend/src/web_page/domain/repositories/: path_repository.py  webpage_repository.py
apps/backend/src/web_page/domain/value_objects/: file_name.py  html_content.py  path.py  url.py
apps/backend/src/web_page/infrastructure/adapters/: file_apdapter.py  scraper_adapter.py
apps/backend/src/web_page/infrastructure/persistence/: file_html_repository.py  file_txt_repo.py  memory_webpage_repo.py
apps/backend/src/web_page/infrastructure/scrapers/: beautifulsoup_scraper.py
apps/frontend/interfaces/cli/: web_scraping.py
apps/frontend/src/cli_command/application/: cli_service.py
apps/frontend/src/cli_command/interfaces/cli/: cli_menu.py
apps/frontend/src/interfaces/cli/: web_scraping.py
apps/ia/src/agents/stock-analyst/application/dto/: webpage_dto.py
apps/ia/src/agents/stock-analyst/application/mapper/: webpage_mapper.py
apps/ia/src/agents/stock-analyst/application/service/: scraper_use_case.py
apps/ia/src/agents/stock-analyst/domain/entities/: webpage.py
apps/ia/src/agents/stock-analyst/domain/repositories/: webpage_repository.py
apps/ia/src/agents/stock-analyst/domain/value_objects/: html_content.py  url.py
apps/ia/src/agents/stock_analyst/: README.md
apps/ia/src/utils/: openai_env_checker.py
src/common/: openai_env_checker.py
(+19 files in other folders)
