[project]
name = "langchain_experiments"
version = "0.1.0"
requires-python = ">=3.12"
description = "Simple use cases and practical experiments with open-source and private LLMs, leveraging LangChain as the orchestration framework. This repository explores integrations, workflows, and quick prototypes to better understand the real-world potential of language models."
readme = "README.md"
dependencies = [
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.2",
]
[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]  
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langgraph>=0.5.1",
    "lxml>=6.0.0",
    "openai>=1.93.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
]
