[project]
name = "langchain_experiments"
version = "0.1.0"
requires-python = ">=3.12"
description = "Simple use cases and practical experiments with open-source and private LLMs, leveraging LangChain as the orchestration framework. This repository explores integrations, workflows, and quick prototypes to better understand the real-world potential of language models."
readme = "README.md"
dependencies = [
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.2",
    "beautifulsoup4>=4.13.4",
    "langgraph>=0.5.1",
    "lxml>=6.0.0",
    "openai>=1.93.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/ia/src/agents/stock_analyst"]


[tool.ruff]
exclude = [".ruff_cache", ".svn", ".tox", ".venv", "dist"]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

